# cellular-automata-fluid-simulation

./: Cargo.toml  Dockerfile  README.md
benches/: capture_settings.cap  captures_1300x1300-frame1502.rdc  captures_1300x1300-frame3593.rdc  captures_1300x1300-frame6814.rdc  captures_1300x1300-frame994.rdc  captures_250x250-frame12767.rdc  captures_250x250-frame15559.rdc  captures_500x500-frame13779.rdc  captures_500x500-frame17540.rdc  captures_500x500-frame20222.rdc  captures_500x500-frame2855.rdc  captures_500x500-frame8840.rdc  plot.py  simulation.rs
shaders/: composition.frag  composition_experiments.frag  compute.shader  passthrough.vert
src/: lib.rs  main.rs
