[package]
name = "automata-sandbox"
version = "0.1.0"
authors = ["JCR <vonzo55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.15.3"
vek = "0.9.12"
rand = "0.5.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simulation"
harness = false